fixed image/description spacing

--- a/frontend/src/Post/Post.css
+++ b/frontend/src/Post/Post.css
@@ -13,7 +13,7 @@
   }
 
   .post-image {
-    flex: 1 1 150px;
+    flex: 1 1 0px;
     max-width: 500px;
     max-height: 500px;
     overflow: hidden;
